css/site.css
.ct-logo {
  padding-left: 0.9375rem;
  padding-right: 0.9375rem;
}

.ct-logo img {
  width: 230px;
  padding-left: 0.9375rem;
  padding-right: 0.9375rem;
}

@media (max-width: 1025px) {
  .ct-logo {
    width: 100%;
    padding-left: 0px;
  }
  .ct-logo img {
    display: block;
    margin: 0 auto;
    padding-right: 72px;
    padding-left: 0px;
  }
}

.sidebar-title {
  background-color: white;
}

.center-cell {
  margin: 0 auto;
}

/*.home-header-img {
position: relative;
background: linear-gradient(rgba(1, 127, 221, 0.70), rgba(1, 127, 221, 0.70)),url(http://cdn.slashgear.com/wp-content/uploads/2012/10/google-datacenter-tech-05.jpg);
background-color: #017fdd;
background-repeat: no-repeat;
background-position: center;
background-size: cover;
min-height: 800px;
margin-top: -80px;
}*/

.home-header {
  height: 800px;
}

#particles-js{
  position: absolute;
  z-index: 0;
  width: 100%;
  background-color: #16AC5B;
  /*background-color: #FF4A00;*/
  top: 0;
  left: 0;
  height: 850px;
}

.home-header-text {
  color: white;
  position: relative;
  z-index: 1;
}

.home-header button {
  height: 50px;
  font-size: 24px
}

.home-header h2 {
  font-size: 20px;
  line-height: 30px;
}

@media (max-width: 479px) {
  .home-header h1 {
    font-size: 36px;
  }
}

.home-stats {
  position: relative;
  z-index: 6;
  background-color: #ffffff;
  border-bottom: 1px solid rgb(224, 224, 224);
  color: rgba(0,0,0, 0.54);
  padding-top: 50px;
  padding-bottom: 40px;
}

.home-stats h4 {
  margin: 0px
}

.home-features {
  position: relative;
  z-index: 5;
  margin-bottom: 20px;
  padding-top: 40px;
  padding-bottom: 60px;
}

.home-features-card-image {

  border-bottom: 1px solid rgb(224, 224, 224);
}

.home-features img {
  max-height: 400px;
  max-width: 100%;
}

.home-features button {
  margin-top: 30px;
}

.home-features-body {
  padding-top: 50px;
  padding-bottom: 40px;
}

@media (max-width: 1077px) {
  .home-features h4 {
    font-size: 22px;
  }
}

@media (max-width: 1014px) {
  .home-features h4 {
    font-size: 20px;
  }
  .home-features span {
    font-size: 14px;
  }
}

@media (max-width: 952px) {
  .home-features h4 {
    font-size: 19px;
  }
}

@media (max-width: 920px) {
  .home-features h4 {
    font-size: 18px;
  }
}

@media (max-width: 890px) {
  .home-features h4 {
    font-size: 17px;
  }
}

@media (max-width: 858px) {
  .home-features h4 {
    font-size: 16px;
  }
}

@media (max-width: 839px) {
  .home-features h4 {
    font-size: 24px;
  }
  .home-features span {
    font-size: 16px;
  }
}

.home-features .mdl-card__supporting-text{
  width: auto;
}

.compatible-hardware {
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #017fdd;
  color: white;
}

.compatible-hardware table {
  color: rgba(0,0,0, 0.87);
  white-space: normal;
}

.mat-banner-list {
  position: relative;
  z-index: 6;
  padding-top: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid rgb(224, 224, 224);
  padding-left: 40px;
  padding-right: 40px;
}

.mat-banner-list h2 {
  margin-top: 16px;
}

.mat-banner {
  position: relative;
  z-index: 5;
  padding-top: 40px;
  padding-bottom: 40px;
  border-bottom: 1px solid rgb(224, 224, 224);
  padding-left: 40px;
  padding-right: 40px;
  background-color: white;
}

.mat-banner p {
  color: rgba(0,0,0, 0.54);
}

.mat-banner img {
  max-width: 80%;
}

.mat-banner button {
  margin-top: 20px;
  margin-bottom: 30px;
  height: 40px;
  font-size: 18px;
}

@media (max-width: 839px) {
  .mat-banner {
    text-align: center;
  }
}

.contact-main {
  background-color: #017fdd;
  height: 400px;
  padding-top: 40px;
  padding-bottom: 60px;
  color: white;
  line-height: 30px;
}

.contact-main a {
  color: white;
}

.contact-main h2 {
  margin-top: 100px;
}

.contact-main button {
  margin-top: 20px;
}

.contact-card {
  position: relative;
  z-index: 6;
  margin-top: -120px;
  margin-bottom: 20px;
}

/*.contact-us {
  position: relative;
  z-index: 5;
  margin-bottom: 20px;
  padding-top: 40px;
  padding-bottom: 60px;
  background-color: #FAFAFA;
  color: white;
}

.contact-us p {
  color: w;
  text-align: center;
}

.contact-card button {
  float: right;
}

.contact-card {
  width: auto;
  max-width: 400px;
  min-width: 200px;
}

.contact-card input {
  display: block;
}

.contact-title h3 {
  margin-left: 8px;
  margin-top: 0px;
  margin-bottom: 16px;
  color: rgba(0,0,0, 0.87);
}

.contact-title p {
  margin-left: 8px;
  color: rgba(0,0,0, 0.87);
  text-align: left;
}*/

.features-tab {
  cursor: pointer;
}

.get-started {
  position: relative;
  z-index: 3;
  background-color: #017fdd;
  margin-top: -20px;
  padding-top: 90px;
  padding-bottom: 90px;
}

.get-started-card {
  padding-left: 20px;
  padding-right: 20px;
}

.get-started-card p {
  color: rgba(0,0,0, 0.54);
}

.get-started button {
  margin-top: 10px;
  margin-bottom: 30px;
  height: 40px;
  font-size: 18px;
}

.home-integrations {
  position: relative;
  z-index: 4;
  margin-top: -20px;
  padding-top: 80px;
  padding-bottom: 60px;
}

.home-integrations img {
  max-width: 100%;
}

.home-integrations button {
  margin-top: 20px;
  margin-bottom: 30px;
  height: 40px;
  font-size: 18px;
}

@media (max-width: 839px) {
  .home-integrations {
    text-align: center;
  }
}

.home-customers {
  position: relative;
  z-index: 3;
  /*background-color: #F5F5F5;*/
  margin-top: -20px;
  padding-top: 70px;
  padding-bottom: 50px;
}

.stat-card {
  padding-left: 15px;
  padding-right: 15px;
  height: 80px;
  min-height: 50px;
  min-width: 180px;
  max-width: 250px;
}

.stat-card-top p {
  font-size: 1.2em;
  margin: 0px;
}

.stat-card-stat h2 {
  margin: 0px;
  text-align: center;
}

.stat-card-end p {
  font-size: 1.2em;
  text-align: center;
  margin: 0px;
}

.footer-social {
  padding-top: 0px;
  margin-bottom: 0px;
  text-align: right;
}

.footer-social a {
  text-decoration: none;
}

.footer-social button {
  color: rgb(224, 224, 224);
}
/* ... */

